# not-llama-fs

./: README.md  justfile  pyproject.toml  requirements.txt
app/: __init__.py
not_llama_fs/producers/: openai_producer.py
